--- a/src/interface/winMain/index.html
+++ b/src/interface/winMain/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <title>Hello World!</title>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-    <link rel="stylesheet" type="text/css" href="./styles.css">
+    <link rel="stylesheet" type="text/css" href="../styles.css">
 </head>
 
 <body>
     <div id="app"></div>
-    <script type="module" src="main.mjs"></script>
+    <script type="module" src="winMain.mjs"></script>
 </body>
 </body>
 
