--- a/src/interface/winlog/index.html
+++ b/src/interface/winlog/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>test</title>
+    <title>winlog</title>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
     <link rel="stylesheet" type="text/css" href="../styles.css">
 </head>
